# visualize_my_moveit_trajectories

./: CMakeLists.txt  package.xml
scripts/: visualize_my_moveit_trajectories.py
